app/components/Styles/Header.css
.header {
  width: 100%;
  font-family: var(--font-rubik);
  position: absolute;
  z-index: 999;
}

.bg-header {
  height: 20rem;
  background-image: url(https://car-rental-ten.vercel.app/static/media/heroes-bg.71ab9a13d73de3860763.png);
  background-repeat: no-repeat;
  background-size: cover;
  position: static;
}

.navbar-link,
.navbar-con,
.navbar-btns {
  display: flex;
}

.navbar-container,
.navbar-container-mobile {
  height: 100%;
  background-color: hsla(0, 0%, 100%, 0.92);
}

.navbar-container {
  padding: 2rem 3rem;
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.navbar-home {
  padding: 2rem 3rem;
}

.navbar-con {
  align-items: center;
  justify-content: space-between;
}

.navbar-con-title h2 {
  font-size: 2.4rem;
}
& h3 {
  font-weight: 500;
}

.title-off {
  display: none;
}

.navbar-link {
  gap: 1.6rem;
  cursor: pointer;
}

.navbar-link,
.signin-btn {
  font-weight: 500;
}

.navbar-btns {
  gap: 1.6rem;
  align-items: center;
}

.nav-hover {
  transition: color 0.3s ease-in-out;
}

.nav-hover:hover {
  color: var(--btn);
}

.regis-btn {
  width: 125px;
  height: 49px;
}

.scroll-up {
  background-color: var(--btn);
  bottom: 2%;
  right: 2%;
  padding: 0.1rem 0.8rem;
  position: fixed;
  font-size: 25px;
  color: #fff;
  font-weight: 500;
  border: 2px solid #fff;
}

.navbar-con-mobile,
.navbar-side {
  display: none;
}

@media (max-width: 1024px) {
  .mobile-hamburger,
  .navbar-side-close-btn {
    cursor: pointer;
  }

  .navbar-container {
    display: none;
  }

  .navbar-container-mobile {
    display: block;
  }

  .navbar-con {
    display: none;
  }

  .navbar-con-mobile {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-direction: column;
    padding: 2rem;
  }

  .navbar-con-title {
    padding: 0 0 3rem;
  }

  .navbar-side {
    position: fixed;
    top: 0;
    right: -100%;
    background-color: rgb(255, 255, 255);
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.2s;
  }

  .navbar-side-box {
    display: flex;
    flex-direction: column;
    position: relative;
  }

  .navbar-side-box li {
    font-family: var(--font-poppins);
    font-weight: 400;
    font-size: 24px;
    width: 100%;
    padding: 1.5rem 3rem;
    text-align: center;
    transition: all 0.6s ease-in-out;
  }

  .navbar-side-box li:hover {
    background-color: rgba(185, 185, 185, 0.5);
  }

  .navbar-side-close-btn {
    position: absolute;
    right: 30px;
    top: 45px;
  }

  .active-nav {
    right: 0;
  }
}

